--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1209,6 +1209,29 @@ h1, h2, h3, h4, h5, h6 {
   background: transparent;
   border: 2px solid #ff3b30;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
 /*# sourceMappingURL=style.css.map */
