--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1234,4 +1234,8 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
 }
 
+.dropdown-menu{
+  width: auto;
+}
+
 /*# sourceMappingURL=style.css.map */
